= CHANGES

Catalog(ue) of changes for Twitter4R 0.1.x releases including Retrospectiva ticket cross-reference numbers.  Refer to http://retro.tautology.net/projects/twitter4r/tickets for more information.

== 0.3.1 Changes
* Added Twitter4R shell
* Improved code coverage for twitter/ext/stdlib code and removed hard coded extension in GET request path for retrieving account information
* Changed Twitter::RESTError super class to be RuntimeError instead of Exception
* Added URI.encode => CGI.escape fix
* Added block methods
* Added Twitter::Client#inspect method to XXXX out passwords
* Minor refactoring of spec/spec_helper.rb 
* Added support for :page, :lite and :since options for Twitter::User#followers, Twitter::Client#my([:friends|:followers]...) and Twitter::Client#user([:friends|:followers]...)calls
* Added Twitter::Client.status(:replies) support


== 0.3.0 Changes
* Bunch of changes, but forgot to track them and too lazy to look through the SVN/Git logs.  Sorry.

== 0.2.5 Changes

=== 2007-09-23
* Added paging support as per Sergio Santos' request (#36).

== 0.2.4 Changes

=== 2007-07-24
* Fixed ActiveSupport +Time#to_s+ conflict such that integration with Rails is much less painful (#34)

== 0.2.3 Changes

=== 2007-07-22
* Fixed defect #31 such that passing string screen name as for user argument is handled correctly.
* Fixed #30 typo: respond_to -> respond_to?
* Added relevant exception handling for #message(:post, ...) case (#32)
* Add ability to pass in Twitter::User object to Twitter::Client#user(...) #33
* Added stats Rake task
* Updated RDoc for Twitter::Client#user to warn against using it to get followers of authenticated user and updated ArgumentError raising logic as per #29.

== 0.2.2 Changes

=== 2007-07-18
* Fixed URI paths for user, messaging and friendship APIs (#25)
* Added action checks for Twitter::Client methods: #user, #my, #message, #messages, #status, #timeline, #friend (#26)
* Added 'source' configuration documentation. 