@@ -7,3 +7,4 @@ marketing/samples/twitter4rails.post-0_2_4/config/twitter.yml
 marketing/samples/twitter4rails.post-0_2_4/log
 marketing/samples/twitter4rails.post-0_2_4/tmp
 twitter*.gem
+*~
