@@ -11,6 +11,7 @@ require('twitter')
 import('tasks/clean.rake')
 import('tasks/doc.rake')
 import('tasks/find.rake')
+import('tasks/metrics.rake')
 import('tasks/pkg.rake')
 import('tasks/rubyforge.rake')
 import('tasks/spec.rake')
