@@ -1,4 +1,4 @@
-# 
+#
 require('rubygems')
 
 module Twitter; end
@@ -7,9 +7,11 @@ def require_local(suffix)
   require(File.expand_path(File.join(File.dirname(__FILE__), suffix)))
 end
 
-# For better unicode support
-$KCODE = 'u'
-require 'jcode'
+# For better unicode support in 1.8
+if RUBY_VERSION < '1.9'
+  $KCODE = 'u'
+  require 'jcode'
+end
 
 # External requires
 require('yaml')
