@@ -9,13 +9,16 @@ class Twitter::Client
   include Twitter::ClassUtilMixin
 end
 
-require('twitter/client/base.rb')
-require('twitter/client/timeline.rb')
-require('twitter/client/status.rb')
-require('twitter/client/friendship.rb')
-require('twitter/client/messaging.rb')
-require('twitter/client/user.rb')
-require('twitter/client/auth.rb')
-require('twitter/client/favorites.rb')
-require('twitter/client/blocks.rb')
-require('twitter/client/account.rb')
+require('twitter/client/base')
+require('twitter/client/timeline')
+require('twitter/client/status')
+require('twitter/client/friendship')
+require('twitter/client/messaging')
+require('twitter/client/user')
+require('twitter/client/auth')
+require('twitter/client/favorites')
+require('twitter/client/blocks')
+require('twitter/client/account')
+require('twitter/client/graph')
+require('twitter/client/profile')
+require('twitter/client/search')
