@@ -22,6 +22,9 @@ module Twitter
       :protocol, 
       :host, 
       :port, 
+      :search_protocol,
+      :search_host,
+      :search_port,
       :proxy_host, 
       :proxy_port, 
       :proxy_user, 
@@ -49,6 +52,9 @@ module Twitter
     @@defaults = { :host => 'twitter.com', 
                    :port => 443, 
                    :protocol => :ssl,
+                   :search_host => 'search.twitter.com',
+                   :search_port => 80,
+                   :search_protocol => :http,
                    :proxy_host => nil,
                    :proxy_port => nil,
                    :user_agent => "default",
