@@ -1,4 +1,4 @@
-# Generated: Fri, 30 Jan 2009 05:49:41 -0000
+# Generated: Sun, 22 Mar 2009 01:32:47 -0000
 Gem::Specification.new do |s|
   s.name = "twitter4r"
   s.version = "0.3.1"
@@ -11,9 +11,8 @@ Gem::Specification.new do |s|
   s.homepage = "http://twitter4r.rubyforge.org"
   s.rubyforge_project = "twitter4r"
   s.add_dependency("json", ">=1.1.1")
-  s.require_path = "lib"
-  s.files = 
-["lib/twitter/extras.rb","lib/twitter/client.rb","lib/twitter/ext/stdlib.rb","lib/twitter/client/messaging.rb","lib/twitter/client/base.rb","lib/twitter/client/user.rb","lib/twitter/client/timeline.rb","lib/twitter/client/account.rb","lib/twitter/client/favorites.rb","lib/twitter/client/blocks.rb","lib/twitter/client/friendship.rb","lib/twitter/client/auth.rb","lib/twitter/client/status.rb","lib/twitter/config.rb","lib/twitter/meta.rb","lib/twitter/console.rb","lib/twitter/model.rb","lib/twitter/version.rb","lib/twitter/ext.rb","lib/twitter/core.rb","lib/twitter.rb","spec/twitter/ext/stdlib_spec.rb","spec/twitter/client/account_spec.rb","spec/twitter/client/user_spec.rb","spec/twitter/client/base_spec.rb","spec/twitter/client/timeline_spec.rb","spec/twitter/client/friendship_spec.rb","spec/twitter/client/messaging_spec.rb","spec/twitter/client/favorites_spec.rb","spec/twitter/client/status_spec.rb","spec/twitter/client/auth_spec.rb","spec/twitter/client/blocks_spec.rb","spec/twitter/client_spec.rb","spec/twitter/meta_spec.rb","spec/twitter/model_spec.rb","spec/twitter/core_spec.rb","spec/twitter/config_spec.rb","spec/twitter/extras_spec.rb","spec/twitter/version_spec.rb","spec/twitter/console_spec.rb",]
+#  s.require_path = "lib"
+  s.files = ["lib/twitter/extras.rb","lib/twitter/client.rb","lib/twitter/ext/stdlib.rb","lib/twitter/client/messaging.rb","lib/twitter/client/base.rb","lib/twitter/client/user.rb","lib/twitter/client/timeline.rb","lib/twitter/client/account.rb","lib/twitter/client/favorites.rb","lib/twitter/client/blocks.rb","lib/twitter/client/friendship.rb","lib/twitter/client/profile.rb","lib/twitter/client/search.rb","lib/twitter/client/graph.rb","lib/twitter/client/auth.rb","lib/twitter/client/status.rb","lib/twitter/config.rb","lib/twitter/meta.rb","lib/twitter/console.rb","lib/twitter/model.rb","lib/twitter/version.rb","lib/twitter/ext.rb","lib/twitter/core.rb","lib/twitter.rb","spec/twitter/ext/stdlib_spec.rb","spec/twitter/client/account_spec.rb","spec/twitter/client/user_spec.rb","spec/twitter/client/base_spec.rb","spec/twitter/client/timeline_spec.rb","spec/twitter/client/friendship_spec.rb","spec/twitter/client/messaging_spec.rb","spec/twitter/client/profile_spec.rb","spec/twitter/client/favorites_spec.rb","spec/twitter/client/status_spec.rb","spec/twitter/client/graph_spec.rb","spec/twitter/client/search_spec.rb","spec/twitter/client/auth_spec.rb","spec/twitter/client/blocks_spec.rb","spec/twitter/client_spec.rb","spec/twitter/meta_spec.rb","spec/twitter/model_spec.rb","spec/twitter/core_spec.rb","spec/twitter/config_spec.rb","spec/twitter/extras_spec.rb","spec/twitter/version_spec.rb","spec/twitter/console_spec.rb",]
   s.bindir = 'bin'
   s.executables = ['t4rsh']
 end
