@@ -103,6 +103,13 @@
         </div>
       </div>
       <div id="footer">&copy; Copyright 2006-2007 <a href="http://susanpotter.net">Susan Potter</a>.  All rights reserved.</div>
+      <div style="border: 1px solid #171821; width: 100px; 
+      background:url(http://www.stimator.com/images/stimator.gif); 
+      text-align: center; padding: 35px 40% 0 40%; height: 32px;">
+      <span style="font-size: 12px; color:#fff; font-weight:bold; 
+      line-height:14px">$4,216</span><br />
+      <span style="font-size: 10px; color:#F9F7E0">
+      </div>
     </div>
     <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
     </script>
